--- a/templates/meal.html
+++ b/templates/meal.html
@@ -1,12 +1,12 @@
 <div class="week_day {{date}}" id="tempbase" style="width: 90vw; margin: auto">
-    <div class="uk-grid">
+    <div class="uk-grid" style="text-align:right;">
         <div class="uk-width-1-6">
             <a class="uk-slidenav-large" href="#" uk-slidenav-previous uk-slideshow-item="previous" onclick="setab();"></a>
         </div>
         <div class="uk-width-2-3">
             <h3 class="uk-text-lead uk-text-center" id="datah">{{date}}</h3>
         </div>
-        <div class="uk-width-1-6" style="align-content: right">
+        <div style="align-content: left">
             <a class="uk-slidenav-large" style="align-content: right" href="#" uk-slidenav-next uk-slideshow-item="next" onclick="setaf();"></a>
         </div>
     </div>
