--- a/templates/meal.html
+++ b/templates/meal.html
@@ -6,7 +6,7 @@
         <div class="uk-width-2-3">
             <h3 class="uk-text-lead uk-text-center" id="datah">{{date}}</h3>
         </div>
-        <div style="align-content: left">
+        <div class="uk-width-1-6" style="align-content: left; text-align:left">
             <a class="uk-slidenav-large" style="align-content: right" href="#" uk-slidenav-next uk-slideshow-item="next" onclick="setaf();"></a>
         </div>
     </div>
