--- a/templates/dice.html
+++ b/templates/dice.html
@@ -1,4 +1,12 @@
 <div id="tempbase" style="width: 90vw; margin: auto; align-content: center">
     <h3 style="align-content: center">Não há dados para esse dia</h3>
-    <img src="img/dice.png">
+    <div style="font-family: monospace; white-space: pre; font-size: 2rem">
+             .-------.    ______
+            /   o   /|   /\     \
+           /_______/o|  /o \  o  \
+           | o     | | /   o\_____\
+           |   o   |o/ \o   /o    /
+           |     o |/   \ o/  o  /
+           '-------'     \/____o/
+    </div>
 </div>
