voltar ultima data

--- a/templates/dice.html
+++ b/templates/dice.html
@@ -1,5 +1,6 @@
 <div id="tempbase" style="width: 90vw; margin: auto; align-content: center">
     <h3 style="align-content: center">Não há dados para esse dia</h3>
+    <button class="uk-button uk-button-default" onclick="ultimo();">Voltar para o último dia com dados</button>
     <div style="font-family: monospace; white-space: pre; font-size: 2rem">
              .-------.    ______
             /   o   /|   /\     \
